--- a/src/Server.UI/Components/Shared/Layout/HeaderMenu.razor
+++ b/src/Server.UI/Components/Shared/Layout/HeaderMenu.razor
@@ -22,23 +22,9 @@
                            OnClick="OpenSearchDialog"/>
         </MudTooltip>
         <MudSpacer/>
-        <MudTooltip Arrow="true"
-                    Text="@L["Navigate to GitHub"]">
-            <MudIconButton Class="mx-1"
-                           Color="Color.Default"
-                           Icon="@Icons.Custom.Brands.GitHub"
-                           Href="https://github.com/neozhu/CleanArchitectureWithBlazorServer"
-                           Target="_blank"/>
-        </MudTooltip>
-        <LanguageSelector/>
         <AgentStatusToggle/>
+        <NotificationIndicator/>
         <NotificationMenu/>
-        <MudTooltip Text="@(RightToLeft ? L["Toggle right-to-left"] : L["Toggle left-to-right"])">
-            <MudIconButton Class="mx-1"
-                           Icon="@(RightToLeft ? Icons.Material.Filled.FormatTextdirectionLToR : Icons.Material.Filled.FormatTextdirectionRToL)"
-                           Color="Color.Default"
-                           OnClick="@(e => RightToLeftToggle.InvokeAsync())"/>
-        </MudTooltip>
     </MudHidden>
     <MudHidden Breakpoint="Breakpoint.SmAndDown" Invert="true">
         <MudTooltip Arrow="true"
@@ -50,6 +36,7 @@
         </MudTooltip>
         <MudSpacer/>
         <AgentStatusToggle/>
+        <NotificationIndicator/>
         <NotificationMenu/>
     </MudHidden>
 
@@ -65,7 +52,5 @@
     [EditorRequired] [Parameter] public bool NavigationMenuDrawerOpen { get; set; }
     [EditorRequired] [Parameter] public EventCallback ToggleNavigationMenuDrawer { get; set; }
     [EditorRequired] [Parameter] public EventCallback OpenSearchDialog { get; set; }
-    [EditorRequired] [Parameter] public bool RightToLeft { get; set; }
-    [EditorRequired] [Parameter] public EventCallback RightToLeftToggle { get; set; }
     [Parameter] public EventCallback<MouseEventArgs> OnSettingClick { get; set; }
 }
